@@ -4,7 +4,7 @@ DIST gentoo-apache-2.2.14-r1-20091008.tar.bz2 62359 RMD160 0e78de9a61265be2ef797
 DIST gentoo-apache-2.2.15-20100307.tar.bz2 63716 RMD160 aa16c46ec930c020820293b884876946b81bd476 SHA1 20fa102d6094d00d3c874b0b1df69d0ddcf34339 SHA256 b3c4ca6eed24ea82ff37bfa331403b09c94f3b2a8b5b1058761651c6824787c1
 DIST httpd-2.2.14.tar.bz2 5147171 RMD160 ff5077e444ba995475202bb3b9be733384c809d1 SHA1 eacd04c87b489231ae708c84a77dc8e9ee176fd2 SHA256 b2deab8a5e797fde7a04fb4a5ebfa9c80f767d064dd19dcd2857c94838ae3ac6
 DIST httpd-2.2.15.tar.bz2 4959582 RMD160 e5c5da1fdf86a6b0501f6c8e97ccb1982e81cfdf SHA1 5f0e973839ed2e38a4d03adba109ef5ce3381bc2 SHA256 5ae0c428e7abd87eecbac8564d90a7182104325bae7086c21db7b3a1e3140ca7
-EBUILD apache-2.2.14-r1.ebuild 2343 RMD160 50b4d0f3624ae936ba261e3b18ffe9101588d5c0 SHA1 d41339e46e65bb592d2fa3d3d1c2705d7509d22b SHA256 2189fa7aa76e35411f3c921c03ca8f966b9c081b8d2c719fb4339c6f445bd6b1
-EBUILD apache-2.2.15.ebuild 2367 RMD160 8ea60b72f34a1ff3850f0a1620e4a636b2fd37b3 SHA1 9c1640383dff141207ac461f580429f82070954d SHA256 13712f59bb7418dffd0e520787aaaaf208646b0edfca85e4884b32821e0319e1
-MISC ChangeLog 110808 RMD160 b907ee886f2b8103a7b2faeb6dfab9060d3b9144 SHA1 7518cb4a8be187d1fb31817ba169a15cdc482896 SHA256 42ddb414296d72046e32a0c664a426e3090b074020c2459eade12fb4178ad867
+EBUILD apache-2.2.14-r1.ebuild 2354 RMD160 0b43ecf503b973459140b00e4b600c0811fe494c SHA1 bb001cb5017f052e86e7ec1102983d44547deb9c SHA256 c40824012a34554791673015e622f3ce84b678b8e81a4f8c7b015f83a2297d3c
+EBUILD apache-2.2.15.ebuild 2377 RMD160 214737e17e762d16a3ae251b9bb7214726b131b5 SHA1 a746b687992638241f5735796381d6788e7f0a7b SHA256 329a785bc9a49efa655adf85c9abd6f0d6d82fdd62de92657fb21a2366a4707b
+MISC ChangeLog 110971 RMD160 f64bb52e5a80bf318995de2d0474e046ece52df4 SHA1 1cba45b7a7b577cc5e21c7530d63cffd17edf469 SHA256 96c03d427af4e776fbf949ead393c91d55c755270fab6e3730264a7180dee148
 MISC metadata.xml 622 RMD160 217aba625932dbcfcb8bcee1f8a38e6f248e65a7 SHA1 1e7494fe8e49166c8b87a178aca78c9a658f92c7 SHA256 eb6d4f305a170e97bf29e5c6e9d1df6edea8fcdabd35ac2d99ebc8fe5bbd71b4
